# gpt_travel_planner

./: .gcloudignore  .gitignore  deploy.sh  deploy_flight_picker.sh  deploy_functions.sh  deploy_get_flight_data.sh  deploy_schedule_trip.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: get_flight_data.yml
src/: assistant.py  config.py  flight_picker.py  flight_planner.py  flight_radar.py  get_flight_data.py  scheduler.py  tools.py  utils.py
test/: test_gcp_function.py  test_scheduler.py
